--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
-    "express": "^5.1.0",
+    "express": "4.18.2",
     "mongoose": "^8.16.0"
   }
 }
